--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,7 @@
         {% include footer.html %}
     {% endunless %}
     <script src="{{ site.baseurl }}/assets/js/app.js" type="text/javascript"></script>
+    <link rel="shortcut icon" type="image/png" href="/default.png?">
     {%- include footer-scripts.html -%}
   </body>
 </html>
