--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% include footer.html %}
     {% endunless %}
     <script src="{{ site.baseurl }}/assets/js/app.js" type="text/javascript"></script>
-    <link rel="shortcut icon" type="image/png" href="/assets/default.png?">
+    <link rel="shortcut icon" type="image/png" href="/assets/icon.png?">
     {%- include footer-scripts.html -%}
   </body>
 </html>
