--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,15 @@
 <head>
+    
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KQ1TKK4X8Y"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8SBZRDG1J"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-KQ1TKK4X8Y');
+      gtag('config', 'G-Q8SBZRDG1J');
     </script>
+    
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
